# streamlit

./: LICENCSE  README.md  justfile  pyproject.toml
src/: pdf-extract.py
