[project]
name = "pdf-summary"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Altynbek Kaliakbarov", email = "go.gelleson@gmail.com" }
]
dependencies = [
    "streamlit>=1.39.0",
    "langchain>=0.3.4",
    "langchain-community>=0.3.3",
    "pypdf>=5.0.1",
    "langchain-google-genai>=2.0.1",
    "watchdog>=5.0.3",
    "pyperclip>=1.9.0",
    "python-dotenv>=1.0.1",
    "st-copy-to-clipboard>=0.1.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_summary"]
